--- a/theme.css
+++ b/theme.css
@@ -1,34 +1,40 @@
 body {
-  -webkit-text-size-adjust:none;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing:antialiased;
-  font-family: 'Roboto';
-  font-weight: normal;
-  line-height: 17px;
-  color: black;
-  margin: 0px;
-  padding: 0;
+background-color: #181818;
+color: #000000;
+font-family: roboto;
 }
 
-#column {
-  width: 900px;
-  position: relative;
+.agenda-header {
+  font-size: 100px;
+  color: white;
+}
+
+.agenda-content {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 20px;
+  grid-auto-rows: minmax(100px, auto);
 }
 
 .item-block {
-  position: fixed;
-  width: 100%;
-  height: 300px;
+  padding: 5px;
+  background-color: #ffffff;
+  border-radius: 5px;
 }
 
-.item-details {
-  width: 100%;
+.title {
+  font-size: 35px;
+  font-weight: bold;
 }
 
-.item-image {
-    width: 300px;
-    height: 300px;
-    overflow: hidden;
-    background-size: 300px 300px;
-    float: left;
+.date {
+  font-size: 50;
+}
+
+.location {
+  font-size: 15;
+}
+
+.details {
+  font-size: 5;
 }
