--- a/theme.css
+++ b/theme.css
@@ -13,6 +13,7 @@ font-family: roboto;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   column-gap: 20px;
+  row-gap: 20px;
   grid-auto-rows: minmax(100px, auto);
 }
 
